Fixed navbar on mobile.

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -324,6 +324,10 @@ span.picture {
   #logo {
     float: none;
   }
+
+  .navbar-fixed-top, .navbar-fixed-bottom {
+    position: relative;
+  }
 }
 
 
